--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- This loads the Roboto Font from Google. You're welcome to use a different
        font if you'd like. Just remember to change the style.css file as well. ;) -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+  <!-- The FontAwesome library lets use use a wide selection of icons. -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <!-- A favicon is a small icon that appears in the tab of a browser. -->
   <link rel="icon" href="favicon.ico">
   <!-- This loads the style.css file. -->
