clearer css and html starting point

--- a/public/index.html
+++ b/public/index.html
@@ -26,19 +26,19 @@
   </head>
 
   <body>
-    <div>
+    <div id="header">
       <h1>Fitness 🚴‍♂️ Tracker 🏃‍♀️ Pro</h1>
     </div>
-    <div>
-      <div>
+    <div id="container">
+      <div id="analytics">
         <div>
-          <div>
+          <div id="analytics-header">
             <h2>Analytics</h2>
           </div>
-          <dl>
+          <dl id="analytics-list">
             <div>
               <dt>Total Minutes Exercised:</dt>
-              <dd>95</dd>
+              <dd id="total-minutes">95</dd>
             </div>
             <div>
               <dt>Favorite Exercise:</dt>
@@ -46,18 +46,18 @@
             </div>
             <div>
               <dt>Percentage Completed:</dt>
-              <dd>75%</dd>
+              <dd id="percentage-completed">75%</dd>
             </div>
           </dl>
         </div>
       </div>
-      <div>
-        <div>
-          <div>
+      <div id="workouts">
+        <div class="workout">
+          <div class="workout-header">
             <h2>Tuesday Routine</h2>
             <i class="fas fa-edit"></i>
           </div>
-          <div>
+          <div id="exercise-1" class="exercise-header">
             <i class="far fa-circle"></i>
             <h3>Bicycling</h3>
             <span>30 min</span>
@@ -68,7 +68,7 @@
             sociosqu ad litora torquent per conubia nostra, per inceptos
             himenaeos.
           </div>
-          <div>
+          <div id="exercise-2" class="exercise-header">
             <i class="fas fa-check-circle"></i>
             <h3>Running</h3>
             <span>45 min</span>
@@ -81,12 +81,12 @@
             lobortis ipsum.
           </div>
         </div>
-        <div>
-          <div>
+        <div class="workout">
+          <div class="workout-header">
             <h2>Saturday Routine</h2>
             <i class="fas fa-edit"></i>
           </div>
-          <div>
+          <div id="exercise-3" class="exercise-header">
             <i class="fas fa-check-circle"></i>
             <h3>Swimming</h3>
             <span>30 min</span>
@@ -96,7 +96,7 @@
             adipiscing elit. Suspendisse sit amet mattis augue, eget interdum
             diam.
           </div>
-          <div>
+          <div id="exercise-4" class="exercise-header">
             <i class="fas fa-check-circle"></i>
             <h3>Running</h3>
             <span>20 min</span>
