--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
     <div>
       <h1>Fitness 🚴‍♂️ Tracker 🏃‍♀️ Pro</h1>
     </div>
-    <div>
-      <div>
+    <div id="traker_body">
+      <div id="analytics_container">
         <div>
           <div>
             <h2>Analytics</h2>
@@ -51,7 +51,7 @@
           </dl>
         </div>
       </div>
-      <div>
+      <div id="routines_container">
         <div>
           <div>
             <h2>Tuesday Routine</h2>
